# python

./: .dockerignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabotautomerge.yml  docker-image.yml  rebase-dependabot.yml
dask-test/: README.md  pyproject.toml
dask-test/dask_test/: __init__.py  __main__.py  factory.py  tasks.py  types.py
dask-test/tests/: test_factory.py
docker-health-check/: README.md  pyproject.toml
docker-health-check/docker/: Dockerfile  docker-compose.yml
docker-health-check/docker_health_check/: __init__.py  __main__.py  constants.py  enums.py  errors.py  models.py  utils.py
docker-health-check/docker_health_check/api/: __init__.py  healthcheck.py
docker-health-check/docker_health_check/commands/: __init__.py  healthcheck.py
docker-health-check/docker_health_check/notifications/: __init__.py  email.py  hub.py
docker-health-check/docker_health_check/settings/: __init__.py  base.py  email.py
docker-health-check/example/: .env  docker-compose.yml
docker-health-check/scripts/: build.sh  get_env_variables.sh
docker-health-check/tests/notifications/: test_email.py
docker-health-check/tests/settings/: test_email.py
github/: README.md  pyproject.toml
github/github/: __init__.py  __main__.py  __version__.py  client.py  constants.py  httpclient.py  providers.py
github/github/commands/: __init__.py  git.py
github/notebooks/: TestNotebook.ipynb
hadoop/: .gitignore  README.md  pyproject.toml
hadoop/docker/: docker-compose.yml
hadoop/docker/nodemanager/: Dockerfile  python-wrapper
hadoop/hadoop/: __init__.py
hadoop/hadoop/identity/: mapper.py  reducer.py
hadoop/hadoop/social_media_connect/: mapper.py  reducer.py
hadoop/hadoop/word_count/: mapper.py  reducer.py
hadoop/scripts/: build-hadoop.sh  setup-hadoop.sh  test-map-reduce-identity.sh  test-map-reduce-social-media-connect.sh  test-map-reduce-word-count.sh
hadoop/tests/social_media_connect/: test_mapper.py  test_reducer.py
hadoop/tests/word_count/: test_mapper.py  test_reducer.py
jupyter/: README.md  jupyter  pyproject.toml
jupyter/notebooks/: Test.ipynb
jupyter/tests/: test_add.py
pygithub/: README.md  pyproject.toml
pygithub/github/: __init__.py  __main__.py  client.py  httpclient.py  providers.py
pygithub/github/commands/: __init__.py  git.py
pygithub/notebooks/: TestNotebook.ipynb
scripts/: update-all.sh
