[project]
name = "docker-health-check"
version = "0.1.0"
description = ""
authors = [
    {name = "Robert Colfin", email = "robert.colfin@gmail.com"},
]
readme = "README.md"
license = {text = "Apache"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = "<4.0,>=3.13"
dependencies = [
    "docker<8.0.0,>=7.1.0",
    "anyio<5.0.0.0,>=4.6.2.post1",
    "asyncclick<9.0.0.0,>=8.1.7.2",
    "tabulate<1.0.0,>=0.9.0",
    "pydantic<3.0.0,>=2.9.2",
    "pydantic-settings<3.0.0,>=2.6.0",
    "backoff<3.0.0,>=2.2.1",
]

[dependency-groups]
dev = [
    "mypy<2.0.0,>=1.11.2",
    "ruff<1.0.0,>=0.9.0",
    "pytest<9.0.0,>=8.3.3",
    "pytest-cov<7.0.0,>=6.0.0",
    "pytest-ruff<1.0.0,>=0.4.1",
    "pytest-mypy<1.0.0,>=0.10.3",
    "types-tabulate<1.0.0.0,>=0.9.0.20240106",
    "pytest-mock<4.0.0,>=3.14.0",
    "types-requests<3.0.0.0,>=2.32.0.20241016",
]

[tool.mypy]
plugins = "pydantic.mypy"

[tool.ruff.lint.flake8-type-checking]
runtime-evaluated-base-classes = ["pydantic.BaseModel", "sqlalchemy.orm.DeclarativeBase"]

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--doctest-modules --mypy --ruff --ruff-format"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "venv",
]

line-length = 150
indent-width = 4
target-version = "py311"


[tool.ruff.lint.per-file-ignores]
"**/{tests,docs,tools}/*" = ["PLC0415"]


[tool.ruff.lint]
select = [
  "F",
  "E",
  "W",
  "C90",
  "I",
  "N",
  "UP",
  "YTT",
  "ANN",
  "ASYNC",
  "S",
  "BLE",
  "FBT",
  "B",
  "A",
  "C4",
  "DTZ",
  "T10",
  "EM",
  "EXE",
  "FA",
  "ICN",
  "G",
  'INP',
  'PIE',
  "T20",
  'PYI',
  'PT',
  "Q",
  "RSE",
  "RET",
  "SLF",
  "SLOT",
  "SIM",
  "TID",
  "TCH",
  "INT",
  "PTH",
  "ERA",
  "PD",
  "PGH",
  "PL",
  "TRY",
  "FLY",
  "PERF",
  "RUF"
]
ignore = [
  "A005",
  "N999",
  "FBT002",
  "FBT001",
  "S101", # Use of assert detected https://docs.astral.sh/ruff/rules/assert/
  "RUF012", # Mutable class attributes should be annotated with `typing.ClassVar`
  "SIM102", # sometimes it's better to nest
  "TC001",
  "UP038", # Checks for uses of isinstance/issubclass that take a tuple
          # of types for comparison.
          # Deactivated because it can make the code slow:
          # https://github.com/astral-sh/ruff/issues/7871
  "N805"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# The fixes in extend-unsafe-fixes will require
# provide the `--unsafe-fixes` flag when fixing.
extend-unsafe-fixes = [
    "UP038"
]
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
force-single-line = false

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
